<resources>
    <string name="app_name">Civil Advocacy</string>
    <string name="city_state_zip">City State Zip</string>
    <string name="official_title">Official Title</string>
    <string name="politician_name_and_party">Politician Name and Party</string>
    <string name="politician_separator">politician_separator</string>
    <string name="publishing">publishing</string>
    <string name="search_location">search location</string>
    <string name="political_association">Political Association</string>
    <string name="politicianfirstlast">PoliticianFirstLast</string>
    <string name="political_title">Political Title</string>
    <string name="textview">TextView</string>
    <string name="politician_picture">Politician Picture</string>
    <string name="official_activity_location_portrait">Official Activity Location Portrait</string>
    <string name="contact_info">contact_info</string>
    <string name="addres">Address:</string>
    <string name="phone">Phone:</string>
    <string name="website">Website:</string>
    <string name="youtubeclicker">youTubeClicker</string>
    <string name="facebookclicker">faceBookClicker</string>
    <string name="twitterclicker">twitterClicker</string>
    <string name="credittoapi">creditToApI</string>
    <string name="app_title">App Title</string>
    <string name="apiclickablelink">APIClickableLink</string>
    <string name="copyright_info">Copyright Info</string>
    <string name="app_version">App Version</string>
    <string name="location">Location</string>
    <string name="political_office_pos">Political Office Pos</string>
    <string name="politician_name">Politician Name</string>
    <string name="bigger_politician_picture_pda">bigger politician picture PDA</string>
    <string name="address_contents">address Contents</string>
    <string name="actualnumber">actualNumber</string>
    <string name="website_link">Website Link</string>
    <string name="locationOA">location</string>
    <string name="stateposition">statePosition</string>
    <string name="name">Name</string>
    <string name="adress">Address</string>
    <string name="specific_address">Specific Address</string>
    <string name="phone_number">Phone Number:</string>
    <string name="weblink">webLink</string>
    <string name="demorrepub">DemOrRepub</string>
    <string name="pictureofpolitician">PictureOfPolitician</string>
    <string name="gotofb">goToFB</string>
    <string name="gototwitter">goToTwitter</string>
    <string name="gotoyoutube">goToYouTube</string>
    <string name="powered_by">Powered by</string>
    <string name="google_civic_information_api"><u>Google Civic Information API</u></string>
    <string name="_2020_dewone_x_westerfield">\@2020, Dewone X Westerfield</string>
    <string name="version_1_0">Version 1.0</string>
    <string name="website2">Website:</string>
    <string name="demrepubornon">DemRepubOrNon</string>
    <string name="adress2">Address:</string>
    <string name="_2021_dewone_x_westerfield">2021, Dewone X Westerfield</string>
    <string name="civic_advocacy">Civic Advocacy</string>
    <string name="civil_advocacy">Civil Advocacy</string>
    <string name="specific_email">specific Email</string>
    <string name="email">Email:</string>
    <string name="know_your_government">Know Your Government</string>
</resources>