<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/officialActConstraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scroll_View"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearScroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/userLocationOAPortrait"
                android:layout_width="408dp"
                android:layout_height="29dp"
                android:layout_marginEnd="3dp"
                android:background="#55385A"
                android:text="@string/locationOA"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/govPosOAPortrait"
                android:layout_width="360dp"
                android:layout_height="73dp"
                android:layout_marginStart="75dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="76dp"
                android:text="@string/stateposition"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userLocationOAPortrait" />

            <TextView
                android:id="@+id/name_of_politicianOA"
                android:layout_width="299dp"
                android:layout_height="35dp"
                android:layout_marginStart="52dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="60dp"
                android:text="@string/name"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/govPosOAPortrait" />

            <ImageView
                android:id="@+id/imageOfPolitician"
                android:layout_width="377dp"
                android:layout_height="444dp"
                android:layout_marginStart="77dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="78dp"
                android:contentDescription="@string/pictureofpolitician"
                android:onClick="onClickPhoto"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.491"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/political_association"
                app:srcCompat="@drawable/missing" />

            <TextView
                android:id="@+id/political_association"
                android:layout_width="180dp"
                android:layout_height="27dp"
                android:layout_marginStart="118dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="113dp"
                android:text="@string/demrepubornon"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name_of_politicianOA" />

            <TextView
                android:id="@+id/addressOAPortrait"
                android:layout_width="116dp"
                android:layout_height="29dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/adress2"
                android:textAlignment="viewStart"
                android:textColor="#FFFFFF"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageOfPolitician" />

            <TextView
                android:id="@+id/adressInfo"
                android:layout_width="231dp"
                android:layout_height="61dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="45dp"
                android:text="@string/specific_address"
                android:textColor="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/addressOAPortrait"
                app:layout_constraintTop_toBottomOf="@+id/imageOfPolitician" />

            <ImageButton
                android:id="@+id/politicalLogo"
                android:layout_width="122dp"
                android:layout_height="88dp"
                android:layout_marginTop="368dp"
                android:layout_marginEnd="144dp"
                android:background="@null"
                android:contentDescription="@string/demorrepub"
                android:onClick="onClickDemOrRepub"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imageOfPolitician"
                app:srcCompat="@drawable/dem_logo" />

            <TextView
                android:id="@+id/phoneNumberOAPortrait"
                android:layout_width="130dp"
                android:layout_height="31dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="9dp"
                android:text="@string/phone_number"
                android:textColor="#FFFFFF"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/adressInfo" />

            <TextView
                android:id="@+id/phoneNumberInfo"
                android:layout_width="210dp"
                android:layout_height="30dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                android:text="@string/textview"
                android:textColor="#FFFFFF"
                app:layout_constraintStart_toEndOf="@+id/phoneNumberOAPortrait"
                app:layout_constraintTop_toBottomOf="@+id/adressInfo" />

            <TextView
                android:id="@+id/websiteOAPortrait"
                android:layout_width="141dp"
                android:layout_height="33dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="64dp"
                android:text="@string/website"
                android:textColor="#FFFFFF"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phoneNumberOAPortrait" />

            <TextView
                android:id="@+id/websiteLink"
                android:layout_width="231dp"
                android:layout_height="67dp"
                android:layout_marginStart="13dp"
                android:layout_marginTop="52dp"
                android:layout_marginEnd="67dp"
                android:textColor="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.2"
                app:layout_constraintStart_toEndOf="@+id/websiteOAPortrait"
                app:layout_constraintTop_toBottomOf="@+id/phoneNumberInfo" />

            <ImageButton
                android:id="@+id/faceBookClicker"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/gotofb"
                android:onClick="onClickFacebook"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/websiteOAPortrait"
                app:srcCompat="@drawable/facebook" />

            <ImageButton
                android:id="@+id/twitterClicker"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/gototwitter"
                android:onClick="onClickTwitter"
                android:scaleType="fitCenter"
                app:layout_constraintStart_toEndOf="@+id/faceBookClicker"
                app:layout_constraintTop_toBottomOf="@+id/websiteOAPortrait"
                app:srcCompat="@drawable/twitter" />

            <ImageButton
                android:id="@+id/youTubeClicker"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/gotoyoutube"
                android:onClick="onClickYouTube"
                android:scaleType="fitCenter"
                app:layout_constraintStart_toEndOf="@+id/twitterClicker"
                app:layout_constraintTop_toBottomOf="@+id/websiteOAPortrait"
                app:srcCompat="@drawable/youtube" />

            <TextView
                android:id="@+id/emailOAPortrait"
                android:layout_width="129dp"
                android:layout_height="30dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:text="@string/email"
                android:textColor="#FFFFFF"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phoneNumberOAPortrait" />

            <TextView
                android:id="@+id/emailInfo"
                android:layout_width="205dp"
                android:layout_height="30dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:textColor="#FFFFFF"
                app:layout_constraintStart_toEndOf="@+id/emailOAPortrait"
                app:layout_constraintTop_toBottomOf="@+id/phoneNumberInfo" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>