<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/locationDisplayPDA"
        android:layout_width="408dp"
        android:layout_height="28dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:text="@string/location"
        android:textAlignment="textStart"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/politicalPosPDA"
        android:layout_width="168dp"
        android:layout_height="22dp"
        android:layout_marginStart="121dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="122dp"
        android:text="@string/political_office_pos"
        android:textAlignment="textStart"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationDisplayPDA" />

    <TextView
        android:id="@+id/namePDA"
        android:layout_width="231dp"
        android:layout_height="28dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="90dp"
        android:text="@string/politician_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/politicalPosPDA" />

    <ImageView
        android:id="@+id/biggerPicturePDA"
        android:layout_width="368dp"
        android:layout_height="438dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="157dp"
        android:contentDescription="@string/bigger_politician_picture_pda"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/namePDA"
        tools:srcCompat="@tools:sample/avatars" />
</androidx.constraintlayout.widget.ConstraintLayout>